// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero should pass down a background image if provided 1`] = `
<div
  className="sc-AxjAm hJfqat flex flex-column flex-center"
>
  <h2>
    Primary Text
  </h2>
  <h3>
    Secondary Text
  </h3>
</div>
`;

exports[`Hero should render with logo if provided 1`] = `
<div
  className="sc-AxjAm cTHBye flex flex-column flex-center"
>
  <div
    className=" gatsby-image-wrapper"
    style={
      Object {
        "display": "inline-block",
        "height": 100,
        "overflow": "hidden",
        "position": "relative",
        "width": 100,
      }
    }
  >
    <img
      alt=""
      aria-hidden={true}
      src="base:image/png"
      style={
        Object {
          "height": "100%",
          "left": 0,
          "objectFit": "cover",
          "objectPosition": "center",
          "opacity": 1,
          "position": "absolute",
          "top": 0,
          "transitionDelay": "500ms",
          "width": "100%",
        }
      }
    />
    <picture>
      <source
        srcSet="logo.png"
      />
      <img
        alt="Logo"
        height={100}
        loading="lazy"
        onLoad={[Function]}
        src="logo.png"
        srcSet="logo.png"
        style={
          Object {
            "height": "100%",
            "left": 0,
            "objectFit": "cover",
            "objectPosition": "center",
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
        width={100}
      />
    </picture>
    <noscript
      dangerouslySetInnerHTML={
        Object {
          "__html": "<picture><source srcset=\\"logo.png\\" /><img loading=\\"lazy\\" width=\\"100\\" height=\\"100\\" srcset=\\"logo.png\\" src=\\"logo.png\\" alt=\\"Logo\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
        }
      }
    />
  </div>
  <h2>
    Primary Text
  </h2>
  <h3>
    Secondary Text
  </h3>
</div>
`;

exports[`Hero should render with no logo 1`] = `
<div
  className="sc-AxjAm cTHBye flex flex-column flex-center"
>
  <h2>
    Primary Text
  </h2>
  <h3>
    Secondary Text
  </h3>
</div>
`;
